# pykotokenizer

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg
pykotokenizer/: __init__.py  ko_hannanum.py  ko_kkma.py  ko_komoran.py  ko_spacing.py  ko_tokenizer.py
pykotokenizer/resources/ko_tokenizer/data/: word2idx0.json
src/pykotokenizer/ko_spacing/: __init__.py  embedding_maker.py  kospacing.py
src/pykotokenizer/ko_tokenizer/: __init__.py  kotokenizer.py
tests/: korean_tokenization.ipynb
tests/.ipynb_checkpoints/: korean_tokenization-checkpoint.ipynb
