[metadata]
name = pykotokenizer
version = 0.0.3
author = Abdullah Al Imran
author_email = abdalimran@gmail.com
description = Model-based Korean Text Tokenizer in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/abdalimran/pykotokenizer
project_urls =
    Bug Tracker = https://github.com/pypa/pykotokenizer/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6, <3.9
include_package_data = True